# website

./: .dockerignore  .env.dev  .env.dev.template  .env.prod.template  .eslintrc.js  .gitignore  common.yml  db.sqlite3  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  manage.py  package.json  prod.yml  prodstack.yml  pyproject.toml  readme.md  requirements.txt  riotfile.py  staging.yml  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
.datadog-agent-conf.d/python.d/: conf.yaml
.github/workflows/: cd.yml  ci.yml  docker.yml
blog/migrations/: 0001_initial.py  0002_blogpage.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20200321_2203.py  0003_auto_20200327_0537.py  0004_auto_20200328_0510.py  0005_chatmessagereact.py  0006_remove_chatmessage_kind.py  0007_chatmessagetag.py  0008_chatlog.py
chat/templates/: chat.html  chat.js  stream_chat.html
chat/templatetags/: chat_tags.py
church/: admin.py  apps.py  consumers.py  email.py  forms.py  models.py  urls.py  views.py
church/blocks/: bulletin_item.html
church/fixtures/: groups.json  users.json
church/migrations/: 0001_initial.py  0002_auto_20200214_1330.py  0002_auto_20200214_1543.py  0004_prayerrequest.py  (+26 more)
comments/: forms.py  models.py  urls.py  views.py
crossroads/: admin.py  asgi.py  auth.py  consumers.py  context_processors.py  models.py  routing.py  schema.py  settings.py  urls.py  wsgi.py
home/: models.py
polls/: consumers.py  models.py
prayer/: admin.py  forms.py  models.py  urls.py  views.py
utils/: views.py
web/: .eslintrc.js  App.tsx  Auth.tsx  Giving.tsx  Home.tsx  Service.tsx  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
(+65 files in other folders)
